# cox_mate

./: .gitignore  CLAUDE.md  README.md  README_main.md  README_qwen_setup.md  TESTING_GUIDE.md  analysis.ipynb  conftest.py  data.csv  main.py  optimize_prompt.py  prompt.txt  pyproject.toml  pytest.ini  run_cox_mate.py  test_parsing.py  test_parsing_simple.py  validation_mapping.json
assets/item_icons/: README.md
cox_mate/: cox_tracker.py  database.py  item_icons.py  main.py  prompts.py  visual_recognition.py
cox_mate/models/: qwen_vl_setup.py
tests/: __init__.py  test_database.py  test_dspy_optimization.py  test_file_processing.py  test_filename_parsing.py  test_integration.py
validation_images/: README.md  validation_examples.json
web/: dashboard.py  main.py
web/templates/: dry_streaks.html  gallery.html  index.html  points.html  purples.html  score.html
