[project]
name = "cox_mate"
version = "0.1.0"
description = "A fun project to track your chambers points and drops"
authors = [
    {name = "Matthew Mulhall",email = "mattlm0831@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "sqlalchemy>=2.0.0",
    "click (>=8.3.1,<9.0.0)",
    "polars (>=1.39.0,<2.0.0)",
    "google-genai (>=1.67.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "plotly (>=5.0.0)",
    "jupyter (>=1.0.0)",
    "statsmodels (>=0.14.0)",
]


[project.scripts]
cox_mate = "cox_mate.main:cli"

[project.optional-dependencies]
dspy = ["dspy-ai>=2.4.0"]
dev = ["pytest>=7.0.0", "pytest-mock>=3.10.0", "black", "isort", "flake8"]

[tool.poetry]
packages = [{include = "cox_mate"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
